# foot-ot-client

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  sonar-project.properties  vcpkg.json
.github/workflows/: analysis-codacy.yml  analysis-codeql.yml  analysis-sonarcloud.yml  build-docker.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml
src/client/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/framework/graphics/: texture.cpp
